updated the about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 
 <body>
     {{>header}}
+    <p> this is created by Nathan King of JavaScript</p>
     <img src="/img/Screen Shot 2019-08-06 at 9.04.34 PM.jpg">
  {{>footer}}
 </body>
